<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="16"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

       <!-- <android.support.design.widget.TextInputLayout
            android:id="@+id/ver_lay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="10dp"
            >-->

              <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/ver_user_name"
                android:layout_marginTop="5dp"
                android:id="@+id/edit_UserName"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:fontFamily="sans-serif-condensed"
                android:padding="5dp"
                />

       <!-- </android.support.design.widget.TextInputLayout>-->

       <!-- <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/ver_lay2"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="4dp"
            >-->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/ver_password"
            android:layout_marginTop="5dp"
            android:id="@+id/edit_UserPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            />

       <!-- </android.support.design.widget.TextInputLayout>-->

       <!-- <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ver_lay3"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="4dp"
            >-->



       <!-- </android.support.design.widget.TextInputLayout>-->

       <!-- <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ver_lay4"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="4dp"
            >-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/ver_email"
                android:layout_marginTop="5dp"
                android:id="@+id/edit_UserEmail"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:fontFamily="sans-serif-condensed"
                android:padding="5dp"
                />

       <!-- </android.support.design.widget.TextInputLayout>-->

       <!-- <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ver_lay5"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="2dp"
            >-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/ver_age"
                android:layout_marginTop="5dp"
                android:id="@+id/edit_UserAge"
                android:fontFamily="sans-serif-condensed"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                />

       <!-- </android.support.design.widget.TextInputLayout>-->

       <!-- <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ver_lay6"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="2dp"
            >-->

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/ver_phone"
                android:layout_marginTop="5dp"
                android:id="@+id/edit_UserPhoneNo"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:fontFamily="sans-serif-condensed"
                />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/ver_confirm_password"
            android:layout_marginTop="5dp"
            android:id="@+id/edit_UserConfPassword"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:fontFamily="sans-serif-condensed"
            />

       <!-- </android.support.design.widget.TextInputLayout>-->


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:hint="@string/ver_btn"
            android:id="@+id/btn_ver_reg"
            android:onClick="RegisterUser"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/ver_btn_size"
            android:layout_marginTop="10dp"


            />




    </LinearLayout>








</LinearLayout>